salesperson main view done

--- a/CapstoneProject/Views/Salesperson/RenderCurrentAppointments.cshtml
+++ b/CapstoneProject/Views/Salesperson/RenderCurrentAppointments.cshtml
@@ -97,15 +97,15 @@
                 @Html.DisplayFor(modelItem => item.LongAddress)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Customer.CustomerID)
+                @Html.DisplayFor(modelItem => item.Customer.ID)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Salesperson.SalespersonID)
+                @Html.DisplayFor(modelItem => item.Salesperson.ID)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.ProjectID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ProjectID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ProjectID">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
             </td>
         </tr>
 }
