--- a/CapstoneProject/Views/Salesperson/Details.cshtml
+++ b/CapstoneProject/Views/Salesperson/Details.cshtml
@@ -79,6 +79,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.SalespersonID">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model.ID">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
