--- a/CapstoneProject/Views/Project/Details.cshtml
+++ b/CapstoneProject/Views/Project/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CapstoneProject.Models.Project
 
 <div>
-    <h4>Project</h4>
+    <h4>Project: @Html.DisplayFor(model => model.Name)</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
@@ -11,22 +11,10 @@
             @Html.DisplayFor(model => model.Description)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.IsSold)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.IsSold)
-        </dd>
-        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.SquareFootage)
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.SquareFootage)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.IsProjectAreaCleared)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.IsProjectAreaCleared)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Start)
@@ -35,85 +23,74 @@
             @Html.DisplayFor(model => model.Start)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.End)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.End)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Cost)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Cost)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.StreetAddress)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.StreetAddress)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.CityAddress)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.CityAddress)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.StateAddress)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.StateAddress)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.ZipAddress)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.ZipAddress)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.LatAddress)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.LatAddress)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.LongAddress)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.LongAddress)
-        </dd>
-        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Customer)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Customer.ID)
+            @Html.DisplayFor(model => model.Customer.FirstName) @Html.DisplayFor(model => model.Customer.LastName)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Salesperson)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Salesperson.ID)
+            @Html.DisplayFor(model => model.Salesperson.FirstName) @Html.DisplayFor(model => model.Salesperson.LastName)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.ID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    @if (Model.Appointments.Count == 0)
+    {
+        <h3>Select an Appointment Time:</h3>
+        @foreach (Appointment appt in Model.Salesperson.Appointments.Where(a => a.IsOpen).ToList().OrderBy(a => a.AppointmentStart))
+        {
+            <div class="row" style="padding: 1rem; border-bottom: 1px solid black;">
+                <div class="col-3" asp-for="Model.Appointments">@appt.AppointmentStart.ToString("dddd, MMMM d, yyyy")</div>
+                <div class="col-3">@appt.AppointmentStart.ToString("h:mm tt") - @appt.AppointmentEnd.ToString("h:mm tt")</div>
+                <a asp-action="ConfirmAppointment" asp-route-apptId="@appt.id" asp-route-id="@Model.id" class="btn btn-primary col-3">Book now</a>
+            </div>
+        }
+    }
+
+    <h3>Upcoming Appointments:</h3>
+    @if (Model.Appointments.Where(a => a.IsBooked == true && a.IsCompleted == false).FirstOrDefault() != null)
+    {
+        @foreach (Appointment appt in Model.Appointments.Where(a => a.IsBooked == true && a.IsCompleted == false))
+        {
+            <div class="row">
+                <div class="col-3">@appt.AppointmentStart.DayOfWeek , @appt.AppointmentStart.ToString("MMMM d yyyy")</div>
+                <div class="col-3">@appt.AppointmentStart.ToString("h:mm tt") - @appt.AppointmentEnd.ToString("h:mm tt")</div>
+                @*<a asp-action="Edit" asp-controller="Appointment" asp-route-id="@appt.ApptID" class="btn btn-primary col-3">Edit</a>*@
+            </div>
+        }
+    }
+    else
+    {
+        <div class="row">
+            <p>No upcoming appointments scheduled.</p>
+        </div>
+    }
+    <h3>Past Appointments:</h3>
+    @if (Model.Appointments.Where(a => a.IsCompleted == true).FirstOrDefault() != null)
+    {
+        @if (Model.Appointments.Where(a => a.IsBooked == true && a.IsCompleted == true) != null)
+        {
+            @foreach (Appointment appt in Model.Appointments.Where(a => a.IsBooked == true && a.IsCompleted == true).ToList())
+            {
+                <div class="row">
+                    <div class="col-3">@appt.AppointmentStart.DayOfWeek , @appt.AppointmentStart.ToString("MMMM d yyyy")</div>
+                    <div class="col-3">@appt.AppointmentStart.ToString("h:mm tt") - @appt.AppointmentEnd.ToString("h:mm tt")</div>
+                    @*<a asp-action="Details" asp-controller="Appointment" asp-route-id="@appt.ApptID" class="btn btn-primary col-3">Details</a>*@
+                </div>
+            }
+        }
+    }
+    else
+    {
+        <div class="row">
+            <p>No appointment history to show for this project.</p>
+        </div>
+    }
 </div>
-<div id="projectMap" class="google-map" styles="width: 80%; height: 600px;"></div>
-<script>
-    function myMap() {
-        const latAndLong = { lat: @Model.LatAddress, lng: @Model.LongAddress };
-        var mapProp = {
-            center: latAndLong,
-            zoom: 15,
-            mapTypeId: google.maps.MapTypeId.ROADMAP
-        };
-        var map = new google.maps.Map(document.getElementById("projectMap"), mapProp);
-        var marker = new google.maps.Marker({
-            position: latAndLng,
-            map: map,
-            title: @(Model.Name + " 's location"),
-            visible: true
-         });
-</script>
+<div>
+    <a asp-action="Edit" asp-route-id="@Model.id">Edit</a> |
+</div>
+<div class="col-6"><iframe width="500" height="300" loading="lazy" src="@ViewBag.MapUrl"></iframe></div>
